Bug 47733 - key board navigation broken in Tools > Options for Autocorrection
Summary: key board navigation broken in Tools > Options for Autocorrection
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.5.0 Beta0
Hardware: Other Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.6.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-03-22 12:48 UTC by Cor Nouws
Modified: 2012-05-01 05:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-03-22 12:48:21 UTC
- In writer choose Tools > Options for Autocorrection
- tab Options
- Now try to navigate to the list with the options with Tab key, Arrow or whatever.
 > Impossible

When the tab (with label Options) has the focus, and you press Tab key once, the focus seems to be lost.
Press Tab once more, and the focus is on the OK button.
Shft-Tab for reversed order gives the same result.

Click in the list with options.
Now you can go up, down, and first, second column with the arrow keys.
Tab out of the list, and you won't get in again.

This is a problem too on the tab page 'Localised options'. 
So it has to do with the container frame, displaying the options.

I first see this in the 3.5.0beta0.
Comment 1 Caolán McNamara 2012-04-25 12:48:30 UTC
confirmed anyway
Comment 2 Caolán McNamara 2012-04-25 13:12:00 UTC
bibisect doesn't contain a version where it works, while it works in 3.4.5
Comment 3 Not Assigned 2012-04-26 01:38:25 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6329ad39832e6d8101b8384e6d96ca281a303d37

Resolves: fdo#47733 keyboard navigation broken for SvxSimpleTableContainer
Comment 4 Cor Nouws 2012-05-01 05:38:11 UTC
thanks ! 
verified in version 3.6.0alpha0+ Build ID: 87897ea