Resolves: fdo#47733 keyboard navigation broken for SvxSimpleTableContainer